--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ contextily==1.2.0
 geopandas==0.10.2
 matplotlib==3.4.3
 pandas==1.2.3
+scipy==1.6.2
 torch==1.11.0
+torch-geometric==2.0.4
+tqdm==4.61.0
